# vilbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/: autechre-releases.json
db_init/: init.sql
src/vilbot/: __main__.py  log_config.py  sample.env
src/vilbot/cogs/example/: __init__.py  cog.py
src/vilbot/cogs/hottake/: __init__.py  cog.py  common.py
src/vilbot/cogs/meta/: __init__.py  cog.py  database_functions.py
src/vilbot/common/: db.py  releases.py
