[project]
name = "vilbot"
version = "0.1.0"
description = "vilbot aecord bot"
authors = [
    {name = "Alex Lipscomb", email = "aecord777@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "py-cord>=2.6.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false
